@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-07-09T01:17:31Z",
-  "count" : 6,
+  "timestamp" : "2022-07-22T08:22:57Z",
+  "count" : 3,
   "count_minmax" : [ 3, 6 ],
-  "count_decinc" : [ -0, +6 ],
+  "count_decinc" : [ -3, +6 ],
   "uniques" : 2,
   "uniques_minmax" : [ 1, 2 ],
   "uniques_decinc" : [ -0, +2 ]
