@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-07-21T16:22:29Z",
+  "timestamp" : "2022-07-22T08:22:57Z",
   "count_outdated" : 408,
   "uniques_outdated" : 80,
-  "count" : 420,
+  "count" : 417,
   "uniques" : 87,
   "views" : [
     {
       "timestamp": "2022-07-08T00:00:00Z",
-      "count": 6,
+      "count": 3,
       "count_minmax": [ 3, 6 ],
       "uniques": 2,
       "uniques_minmax": [ 1, 2 ]
