@@ -1,10 +1,10 @@
 {
-  "count": 12,
+  "count": 9,
   "uniques": 7,
   "views": [
     {
       "timestamp": "2022-07-08T00:00:00Z",
-      "count": 6,
+      "count": 3,
       "uniques": 2
     },
     {
