@@ -1,3 +1,10 @@
+2022-07-22T08:22:57Z:
+* notice: last 14d: unq all: 7 9
+* notice: prev accum: outdated-unq outdated-all / unq all: 80 408 / 87 420
+* notice: next accum: outdated-unq outdated-all / unq all: 80 408 / 87 417
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -3 / +2 +6 -0 -3 / 2 3
+* notice: removed / changed dates: [] / [2022-07-08]
+
 2022-07-21T16:22:29Z:
 * notice: last 14d: unq all: 7 12
 * notice: prev accum: outdated-unq outdated-all / unq all: 80 408 / 86 418
